added a few more UI designs and fixed chat